week11-12/manifests/backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  namespace: dev
  labels:
    app: backend
spec:
  containers:
    - name: backend
      image: hashicorp/http-echo:latest
      args:
        - "-text=hello from backend"
        - "-listen=:8080"
      ports:
        - containerPort: 8080
