week11-12/manifests/restricted-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: restricted-pod
  namespace: dev
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: app
      image: nginxinc/nginx-unprivileged:alpine
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop: ["ALL"]
