week11-12/manifests/sample-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-metrics-app
  template:
    metadata:
      labels:
        app: sample-metrics-app
    spec:
      containers:
        - name: metrics-app
          image: nginx:latest
          ports:
            - containerPort: 80
        - name: nginx-exporter
          image: nginx/nginx-prometheus-exporter:latest
          args:
            - -nginx.scrape-uri=http://localhost/stub_status
          ports:
            - containerPort: 9113
              name: web
