week11-12/manifests/testing-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: testing-pod
  namespace: dev
spec:
  serviceAccountName: readonly-sa
  containers:
    - name: testing
      image: bitnami/kubectl:latest
      command: ["sleep", "3600"]
