week11-12/manifests/sample-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app
spec:
  selector:
    app: simple-app
  ports:
  - port: 80
    targetPort: 80
